--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "anylist": "^0.4.0",
     "axios": "^1.4.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
