--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "anylist": "^0.4.0",
     "axios": "^1.4.0",
+    "life360-node-api": "^0.0.10",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-collapsed": "^4.0.2",
