--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 /node_modules/
 /env.py
-/weather_data.json
-/package-lock.json
+*.json
 /venv/
 /.idea/
 /__pycache__/
 /Modules/__pycache__/
-light_data.json
-threads.json
-/nodeEnv.json
 /__pycache__/
