--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 /node_modules/
 /env.py
-*.json
+/weather_data.json
+/package-lock.json
 /venv/
 /.idea/
 /__pycache__/
 /Modules/__pycache__/
+light_data.json
+threads.json
+/nodeEnv.json
 /__pycache__/
-log.txt
